<?xml version="1.0" encoding="utf-8"?>

<LinearLayout tools:context=".nav_userCenter"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingRight="20dp"
    android:paddingLeft="20dp"
    android:paddingTop="30dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mapbackground"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/nav_userCenter_title"
        android:textSize="30sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="100dp"

        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_8"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="@dimen/dp_4"
        app:cardUseCompatPadding="true"
        app:cardPreventCornerOverlap="false"
        app:cardElevation="@dimen/dp_8"
        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:contentDescription="@string/averdescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:text="@string/loginsignup"
                android:layout_width="100dp"
                android:layout_height="30dp" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>


